objects/zqu__GuidedSellingStep__c.object
<CustomObject>
    <description>A single step of a Guided Selling Flow.</description>
    <fields>
        <fullName>zqu__FilterProductCatalog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to display the entire product catalog in this Guided Selling Step or filter products using list filters.</description>
        <inlineHelpText>Whether to display the entire product catalog in this Guided Selling Step or filter products using list filters.</inlineHelpText>
        <label>Filter Product Catalog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__IncludeCategoryNavigation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not to include product category navigation in this Guided Selling Step (Valid only below ZQuotes 7.0).</description>
        <inlineHelpText>Whether or not to include product category navigation in this Guided Selling Step.</inlineHelpText>
        <label>Include Product Category Navigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__IncludeContextFilters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not to include context filters in this Guided Selling Step.</description>
        <inlineHelpText>Whether or not to include context filters in this Guided Selling Step.</inlineHelpText>
        <label>Include Context Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__IncludeSearchBox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not to include a search box in this Guided Selling Step (Valid only below ZQuotes 7.0).</description>
        <inlineHelpText>Whether or not to include a search box in this Guided Selling Step.</inlineHelpText>
        <label>Include Search Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__IncludeUserFilters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not to include end user product filters in this Guided Selling Step.</description>
        <inlineHelpText>Whether or not to include end user product filters in this Guided Selling Step.</inlineHelpText>
        <label>Include End User Product Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ProductContextFieldName__c</fullName>
        <description>The name of the field on the Product used in the context filtering of this Guided Selling Step.</description>
        <inlineHelpText>The name of the field on the Product used in the context filtering of this Guided Selling Step.</inlineHelpText>
        <label>Mapping Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductContext__c</fullName>
        <description>Whether to include only products selected in the current Guided Selling Flow or all products on the quote in the context for this Guided Selling Step.</description>
        <inlineHelpText>Whether to include only products selected in the current Guided Selling Flow or all products on the quote in the context for this Guided Selling Step.</inlineHelpText>
        <label>Product Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Products Selected in Current Flow</fullName>
                    <default>true</default>
                    <label>Products Selected in Current Flow</label>
                </value>
                <value>
                    <fullName>Products Selected in Current Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__StepTitle__c</fullName>
        <description>The title displayed for this Guided Selling Step.</description>
        <inlineHelpText>The title displayed for this Guided Selling Step.</inlineHelpText>
        <label>Step Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Filter config object used to control the filters this list is linked to.</description>
        <inlineHelpText>The Filter config object used to control the filters this list is linked to.</inlineHelpText>
        <label>Filter</label>
        <referenceTo>zqu__ZFilter__c</referenceTo>
        <relationshipLabel>Guided Selling Steps</relationshipLabel>
        <relationshipName>GuidedSellingSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZList__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ZList</label>
        <referenceTo>zqu__ZList__c</referenceTo>
        <relationshipLabel>Guided Selling Steps</relationshipLabel>
        <relationshipName>GuidedSellingSteps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Guided Selling Step</label>
    <nameField>
        <label>Guided Selling Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guided Selling Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>